# SessionalDiary

./: .gitignore  LICENSE  README.md  Sessional_Diary.py  pyproject.toml  pyrightconfig.json  sessional-diary_Contents_template.idml  sessional-diary_Part-1_template.idml
package/: gui.py  table_sections.py  tables.py  utilities.py
src/sessional_diary/: cli.py  gui.py  tables.py
templates/: sessional-diary_Contents_template.idml  sessional-diary_Part-2_template.idml  sessional-diary_Part-3_template.idml  sessional-diary_Part-4_template.idml
typings/lxml/: etree.pyi
